@@ -76,6 +76,7 @@
     qhash-with-char-pointer-key
     wrong-qevent-cast
     static-pmf
+    raw-environment-function
   - auto-unexpected-qstringbuilder now also warns for lambdas returning QStringBuilder
   - performance optimizations
   - Added -header-filter=<regex> option to clazy-standalone. Only headers matching the regexp will have warnings,
